# recap

./: .gitignore  MANIFEST.md  PLAN.md  README.md  config.example.yaml  index.html  package-lock.json  package.json  pyproject.toml  run_pipeline.py  test_blur_issue.md  vite.config.ts
.claude/: hookify.cortex-backlog.local.md  hookify.cortex-crusade.local.md  hookify.cortex-immutable.local.md  launch.json  settings.local.json
.reap/genome/: constraints.md  conventions.md  principles.md
.reap/lineage/: current.md
docs/handoffs/: 2026-04-14-fix-everything-phase1.md  2026-04-14-phase2-complete.md  2026-04-14-phase4-plugin-manual-acceptance.md  2026-04-15-final-integration-pass.md  2026-04-15-phase6-coverage-baseline.md  2026-04-20-meeting-detection-test.md  2026-04-20-parakeet-chunked-inference.md  2026-04-23-29-acceptance.md  2026-04-23-daemon-autostart-acceptance.md  2026-04-24-28-acceptance.md  2026-04-24-33-acceptance.md
docs/mockups/: calendar-integration.html  pipeline-pause-model.html  pipeline-progress.html  speaker-review-options.html  theme-comparison.html  theme-final.html
docs/plans/: 2026-03-16-core-pipeline-design.md  2026-03-16-core-pipeline-plan.md  2026-03-17-phase-4-zoom-auto-capture.md  2026-03-17-phase-5a-dashboard-impl.md  2026-03-17-phase-5a-dashboard-ui-design.md  2026-03-17-phase-5a-frontend-design.md  2026-03-17-tauri-app-shell-design.md  2026-03-17-tauri-app-shell-plan.md  2026-03-18-phase-5b-wire-real-data-design.md  2026-03-18-phase-5b-wire-real-data.md  2026-03-18-phase-5c-backend-additions-design.md  2026-03-18-phase-5c-implementation.md  2026-03-18-phase-6-recording-expansion-design.md  2026-03-18-phase-6-recording-expansion.md  2026-03-19-calendar-timeline-design.md  2026-03-19-calendar-timeline-plan.md  2026-03-19-participant-cards-design.md  2026-03-19-participant-cards-plan.md  2026-03-19-phase-7-onboarding-design.md  2026-03-19-phase-7-onboarding.md  2026-03-19-phase-8-polish-design.md  2026-03-19-phase-8-polish.md  2026-03-20-animations-design.md  2026-03-20-animations-plan.md  2026-03-25-test-readiness-design.md  2026-03-25-test-readiness.md  2026-04-06-obsidian-plugin-architecture.md  2026-04-13-implementation-overview.md  2026-04-13-obsidian-plugin-architecture.md  2026-04-13-phase-0-repo-cleanup.md  2026-04-13-phase-1-daemon-foundation.md  2026-04-13-phase-2-audio-recording.md  2026-04-13-phase-3-pipeline.md  2026-04-13-phase-4-meeting-detection.md  2026-04-13-phase-5-calendar-oauth.md  2026-04-13-phase-6-plugin-core.md  2026-04-13-phase-7-plugin-advanced.md  (+32 more)
extension/: background.js  content.js  manifest.json  options.html  options.js
obsidian-recap/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
prompts/: meeting_analysis.md  meeting_briefing.md  participant_extraction.md
recap/: __init__.py  __main__.py  analyze.py  artifacts.py  bootstrap_oauth.py  cli.py  config.py  errors.py  frames.py  identity.py  launcher.py  list_zoho_calendars.py  models.py  pipeline.py  todoist.py  transcribe.py  vault.py
scripts/: build-sidecar.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: briefing.rs  calendar.rs  config_gen.rs  credentials.rs  deep_link.rs  diagnostics.rs  display.rs  lib.rs  meetings.rs  notifications.rs  oauth.rs  participants.rs  sidecar.rs  tray.rs
src-tauri/src/recorder/: capture.rs  google_meet.rs  listener.rs  mod.rs  monitor.rs  recorder.rs  share_detect.rs  teams.rs  types.rs  zoho_meet.rs  zoom.rs
tests/: conftest.py  test_analyze.py  test_api_config.py  test_api_events.py  test_artifacts.py  test_artifacts_path_resolver.py  test_attach.py  test_attach_integration.py  test_audio_convert.py  test_audio_events.py  test_audio_loopback_lifecycle.py  test_audio_multi_loopback_mix.py  test_audio_warning_e2e.py  test_audio_warning_persistence.py  test_autostart.py  test_calendar_google.py  test_calendar_scheduler.py  test_calendar_sync.py  test_calendar_zoho.py  test_call_state.py  test_cli.py  test_clip_endpoint.py  test_config.py  test_credentials.py  test_daemon_auth.py  test_daemon_config.py  test_daemon_config_mutations.py  test_daemon_logging.py  test_daemon_main.py  test_daemon_server.py  test_daemon_service.py  test_daemon_startup.py  test_detection.py  test_detector.py  test_e2e_pipeline.py  test_enrichment.py  test_errors.py  test_event_index.py  test_event_journal.py  test_extension_auth.py  (+47 more)
(+154 files in other folders)
