[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recap"
version = "0.2.0"
description = "Meeting recording → transcription → analysis → Obsidian vault notes"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]

[tool.pytest.ini_options]
testpaths = ["tests"]
